@@ -1,0 +1,9 @@
+<?php
+class ExportOutput
+{
+    function iterator($input)
+    {
+        return ++$input;
+    }
+}
+?>
