@@ -1,0 +1,3 @@
+[RssMgr]
+setHeaders      = false
+requiresAuth    = false
